# PIRonGPU

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
example/: CMakeLists.txt  pir_example.cu
src/: CMakeLists.txt
src/pirongpu/: CMakeLists.txt
src/pirongpu/include/: ciphertext_cpu.hpp  complex_cpu.hpp  context_cpu.hpp  contextpool_cpu.hpp  decryption_cpu.hpp  decryptor_cpu.hpp  defaultmodulus_cpu.hpp  defines_cpu.hpp  encoder_cpu.hpp  encoding_cpu.hpp  encryption_cpu.hpp  encryptor_cpu.hpp  heoncpu.hpp  keygeneration_cpu.hpp  keygenerator_cpu.hpp  keyswitch_cpu.hpp  modular_arith_cpu.hpp  ntt_cpu.hpp  nttparameters_cpu.hpp  operator_cpu.hpp  pir.cuh  pir_client.cuh  pir_client_cpu.hpp  pir_cpu.hpp  pir_server.cuh  plaintext_cpu.hpp  publickey_cpu.hpp  random_cpu.hpp  secretkey_cpu.hpp  secstdparams_cpu.hpp  switchkey_cpu.hpp  util_cpu.hpp
src/pirongpu/lib/: ciphertext_cpu.cpp  context_cpu.cpp  contextpool_cpu.cpp  dafaultmodulus_cpu.cpp  decryption_cpu.cpp  decryptor_cpu.cpp  encoder_cpu.cpp  encoding_cpu.cpp  encryption_cpu.cpp  encryptor_cpu.cpp  keygeneration_cpu.cpp  keygenerator_cpu.cpp  keyswitch_cpu.cpp  ntt_cpu.cpp  nttparameters_cpu.cpp  operator_cpu.cpp  pir.cu  pir_client.cu  pir_client_cpu.cpp  pir_cpu.cpp  pir_server.cu  plaintext_cpu.cpp  publickey_cpu.cpp  random_cpu.cpp  secretkey_cpu.cpp  util_cpu.cpp
test/: CMakeLists.txt  test_coefficient_conversion.cu  test_decomposition.cu  test_expand.cu  test_simple_query.cu
